drkns 03.11.2020 15:55:05 +0000 - build 5697

1. В некоторых случаях не читались некоторые данные из реестра.

2. Уточнение работы запускателя.

drkns 28.10.2020 00:18:12 +0000 - build 5696

1. В некоторых случаях плагинам отдавались указатели на внутренние данные.

drkns 27.10.2020 20:48:41 +0000 - build 5695

1. С форума: если FarGetPluginPanelItem::Size меньше требуемого размера, то FCTL_GETPANELITEM заполнит столько, сколько возможно.

drkns 27.10.2020 00:25:27 +0000 - build 5694

1. 0003821 / gh-279: Redundant ampersand in the "Group of file masks" dialog title.

drkns 26.10.2020 20:48:46 +0000 - build 5693

1. Новые версии fmt, tinyxml2, Catch2.

drkns 26.10.2020 18:02:12 +0000 - build 5692

1. С форума: 5688 подвисает в меню дисков, если сетевой диск не доступен.

drkns 26.10.2020 02:03:19 +0000 - build 5691

1. Уточнение 5683.

drkns 25.10.2020 20:54:39 +0000 - build 5690

1. 0003818: Бесконечный перезапуск .cmd батчей через double-click и попытке выхода через Ctrl-Break

drkns 25.10.2020 05:30:03 +0000 - build 5689

1. Fix clang build & warnings.

drkns 25.10.2020 01:11:40 +0000 - build 5688

1. Рефакторинг.

drkns 23.10.2020 22:18:08 +0100 - build 5687

1. Обработка исключений:
   - перехват std::terminate
   - альтернативный способ получения стека
   - вывод регистров.

drkns 22.10.2020 22:17:27 +0100 - build 5686

1. Удалены lng строки для single viewer/editor functional keys.
   Они все равно такие же, а пустые кнопки для недоступных действий мы можем сделать и программно.

yogdg 22.10.2020 14:31:20 -0300 - build 5685

1. gh-247: Customizable number of bytes by line in hex viewer

drkns 21.10.2020 17:46:37 +0100 - build 5684

1. gh-274: Editor: Selection isn't cleared on Ctrl+Home/End.

drkns 21.10.2020 01:35:56 +0100 - build 5683

1. Выделение мышью в полях ввода могло работать неадекватно.

2. Уточнения обработки мыши в прочих элементах интерфейса.

drkns 19.10.2020 07:52:23 +0100 - build 5682

1. Уточнение 5681.
