@@ -1,3 +1,9 @@
+drkns 05.11.2020 19:04:14 +0000 - build 5698
+
+1. Experimental: reduce the number of executor parameters.
+
+2. Add a list of loaded modules to exception information.
+
 drkns 03.11.2020 15:55:05 +0000 - build 5697
 
 1. In some cases some data coundn't be read from registry.
