@@ -1,3 +1,9 @@
+drkns 05.11.2020 19:04:14 +0000 - build 5698
+
+1. Экспериментально: уменьшим количество параметров запускателя.
+
+2. В информацию об исключении добавлен список загруженных модулей.
+
 drkns 03.11.2020 15:55:05 +0000 - build 5697
 
 1. В некоторых случаях не читались некоторые данные из реестра.
